--- a/RecipeBox/Pages/NewRecipePage.xaml
+++ b/RecipeBox/Pages/NewRecipePage.xaml
@@ -21,17 +21,17 @@
 
             <RelativePanel x:Name="RecipeDetailsPanel" RelativePanel.Below="NewRecipeCommandBar">
                 <StackPanel x:Name="RecipeDetailsPanelLeft" Margin="20" >
-                    <TextBox x:Name="RecipeName" Header= "Name" TabIndex="0" Margin="0,24,0,0" MaxLength="320" Width="400" HorizontalAlignment="Left" InputScope="Text"/>
+                    <TextBox x:Name="RecipeName" Header= "Name" TabIndex="0" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
                     <!-- Replace RecipeCategories with a TokenizingTextBox -->
-                    <TextBox x:Name="RecipeCategories" Header= "Categories" TabIndex="2" Margin="0,24,0,0" MaxLength="320" Width="400" HorizontalAlignment="Left" InputScope="Text"/>
-                    <TextBox x:Name="RecipeServings" Header="Number of servings" TabIndex="4" Margin="0,24,0,0" MaxLength="50" Width="125" HorizontalAlignment="Left" InputScope="NumberFullWidth" />
-                    <TextBox x:Name="RecipeUrl" Header="Url" TabIndex="8" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Text" />
+                    <TextBox x:Name="RecipeCategories" Header= "Categories" TabIndex="2" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
+                    <TextBox x:Name="RecipeServings" Header="Number of servings" TabIndex="4" Margin="0,24,0,0" MaxLength="10" Width="125" HorizontalAlignment="Left" InputScope="NumberFullWidth" />
+                    <TextBox x:Name="RecipeUrl" Header="Url" TabIndex="8" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
                 </StackPanel>
 
                 <StackPanel x:Name="RecipeDetailsPanelRight" Margin="20" RelativePanel.RightOf="RecipeDetailsPanelLeft" >
-                    <TextBox x:Name="RecipeDescription" Header="Description" TabIndex="1" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Text" />
+                    <TextBox x:Name="RecipeDescription" Header="Description" TabIndex="1" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
                     <!-- Replace RecipeCuisines with a TokenizingTextBox -->
-                    <TextBox x:Name="RecipeCuisines" Header= "Cuisines" TabIndex="3" Margin="0,24,0,0" MaxLength="320" Width="400" HorizontalAlignment="Left" InputScope="Text"/>
+                    <TextBox x:Name="RecipeCuisines" Header= "Cuisines" TabIndex="3" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
                     <RelativePanel x:Name="RecipeTimePanel">
                         <TextBox x:Name="RecipePrepTime" Header="Prep Time" TabIndex="5" Margin="0,24,0,0" Width="70" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59" />
                         <TextBox x:Name="RecipeCookTime" Header="Cook Time" TabIndex="6" Margin="24,24,0,0" Width="70" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59" RelativePanel.RightOf="RecipePrepTime" />
@@ -47,9 +47,9 @@
             <RelativePanel x:Name="RecipeIngredientsPanel" Margin="20" RelativePanel.Below="RecipeDetailsPanel">
                 <TextBlock x:Name="RecipeIngredientsTitleTextBlock" Text="Ingredients" VerticalAlignment="Center" Style="{ThemeResource BaseTextBlockStyle}" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"/>
                 <RelativePanel x:Name="RecipeIngredientPanel" RelativePanel.Below="RecipeIngredientsTitleTextBlock">
-                    <TextBox x:Name="AddRecipeIngredientQuantityTextBox" Header="Quantity" TabIndex="10" Width="65" HorizontalAlignment="Left" InputScope="NumberFullWidth" />
+                    <TextBox x:Name="AddRecipeIngredientQuantityTextBox" Header="Quantity" MaxLength="10" TabIndex="10" Width="65" HorizontalAlignment="Left" InputScope="NumberFullWidth" />
                     <ComboBox x:Name="AddRecipeIngredientUnitOfMeasurementComboBox" Header="Unit of Measurement" TabIndex="11" Margin="10,0,0,0" Width="135" HorizontalAlignment="Left" RelativePanel.RightOf="AddRecipeIngredientQuantityTextBox" />
-                    <TextBox x:Name="AddRecipeIngredientNameTextBox" Header="Name" TabIndex="12" Margin="10,0,0,0" Width="180" HorizontalAlignment="Left" InputScope="Text" RelativePanel.RightOf="AddRecipeIngredientUnitOfMeasurementComboBox" />
+                    <TextBox x:Name="AddRecipeIngredientNameTextBox" Header="Name" TabIndex="12" Margin="10,0,0,0" Width="180" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" RelativePanel.RightOf="AddRecipeIngredientUnitOfMeasurementComboBox" />
                 </RelativePanel>
 
                 <StackPanel x:Name="RecipeIngredientsButtonPanel" Orientation="Horizontal" RelativePanel.Below="RecipeIngredientPanel" RelativePanel.AlignRightWithPanel="True">
@@ -69,7 +69,7 @@
             </RelativePanel>
 
             <RelativePanel x:Name="RecipeInstructionsPanel" Margin="20" RelativePanel.RightOf="RecipeIngredientsPanel" RelativePanel.Below="RecipeDetailsPanel" >
-                <TextBox x:Name="AddRecipeInstructionTextBox" Header="Instructions" PlaceholderText="Enter an instructions here" TabIndex="13" MaxLength="320" Width="400" HorizontalAlignment="Left" InputScope="Text" />
+                <TextBox x:Name="AddRecipeInstructionTextBox" Header="Instructions" PlaceholderText="Enter an instructions here" TabIndex="13" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
 
                 <StackPanel x:Name="RecipeInstructionsButtonPanel" Orientation="Horizontal" RelativePanel.Below="AddRecipeInstructionTextBox" RelativePanel.AlignRightWithPanel="True">
                     <AppBarButton x:Name="RecipeInstructionAddButton" Style="{StaticResource AppBarButtonRevealStyle}" Icon="Add" Label="Add instruction" Click="RecipeInstructionsAddButton_Click" />
@@ -88,7 +88,7 @@
             </RelativePanel>
 
             <RelativePanel x:Name="RecipeNotesPanel" Margin="20" RelativePanel.Below="RecipeIngredientsPanel">
-                <TextBox x:Name="AddRecipeNoteTextBox" Header="Notes" PlaceholderText="Enter a note here" TabIndex="14" MaxLength="320" Width="400" HorizontalAlignment="Left" InputScope="Text" />
+                <TextBox x:Name="AddRecipeNoteTextBox" Header="Notes" PlaceholderText="Enter a note here" TabIndex="14" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
 
                 <StackPanel x:Name="RecipeNotesButtonPanel" Orientation="Horizontal" RelativePanel.Below="AddRecipeNoteTextBox" RelativePanel.AlignRightWithPanel="True">
                     <AppBarButton x:Name="RecipeNoteAddButton" Style="{StaticResource AppBarButtonRevealStyle}" Icon="Add" Label="Add note" Click="RecipeNotesAddButton_Click" />
