--- a/RecipeBox/Pages/NewRecipePage.xaml
+++ b/RecipeBox/Pages/NewRecipePage.xaml
@@ -10,28 +10,30 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    DataContext="{x:Bind recipe}"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
         <RelativePanel>
             <TextBlock x:Name="TitleTextBlock" Text="New Recipe" Style="{StaticResource TitleTextBlockStyle}" Margin="24,0,0,24" />
+            <TextBlock Text="*" Style="{StaticResource TitleTextBlockStyle}" Visibility="{Binding NeedsSaved, Mode=OneWay}" RelativePanel.RightOf="TitleTextBlock" />
             <CommandBar x:Name="NewRecipeCommandBar" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" RelativePanel.AlignRightWithPanel="True" OverflowButtonVisibility="Collapsed" DefaultLabelPosition="Right">
                 <AppBarButton x:Name="saveRecipeButton" Tag="saveRecipeButton" Icon="Save" Label="Save" Click="saveRecipeButton_Click" />
             </CommandBar>
 
             <RelativePanel x:Name="RecipeDetailsPanel" RelativePanel.Below="NewRecipeCommandBar">
                 <StackPanel x:Name="RecipeDetailsPanelLeft" Margin="20" >
-                    <TextBox x:Name="RecipeName" Header= "Name" TabIndex="0" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
+                    <TextBox x:Name="RecipeName" Text="{Binding Name, Mode=TwoWay}" Header="Name" TabIndex="0" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
                     <!-- Replace RecipeCategories with a TokenizingTextBox -->
-                    <TextBox x:Name="RecipeCategories" Header= "Categories" TabIndex="2" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
-                    <TextBox x:Name="RecipeServings" Header="Number of servings" TabIndex="4" Margin="0,24,0,0" MaxLength="10" Width="125" HorizontalAlignment="Left" InputScope="NumberFullWidth" />
-                    <TextBox x:Name="RecipeUrl" Header="Url" TabIndex="8" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
+                    <TextBox x:Name="RecipeCategories" Text="{Binding Categories, Mode=TwoWay}" Header="Categories" TabIndex="2" Margin="0,24,0,0" Width="400" extensions:ScrollViewerExtensions.HorizontalScrollBarMargin="0,25,0,0" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
+                    <TextBox x:Name="RecipeServings" Text="{Binding Servings, Mode=TwoWay}" Header="Number of servings" TabIndex="4" Margin="0,24,0,0" MaxLength="10" Width="125" HorizontalAlignment="Left" InputScope="NumberFullWidth" />
+                    <TextBox x:Name="RecipeUrl" Text="{Binding Url, Mode=TwoWay}" Header="Url" TabIndex="8" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
                 </StackPanel>
 
                 <StackPanel x:Name="RecipeDetailsPanelRight" Margin="20" RelativePanel.RightOf="RecipeDetailsPanelLeft" >
-                    <TextBox x:Name="RecipeDescription" Header="Description" TabIndex="1" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
+                    <TextBox x:Name="RecipeDescription" Text="{Binding Description, Mode=TwoWay}" Header="Description" TabIndex="1" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
                     <!-- Replace RecipeCuisines with a TokenizingTextBox -->
-                    <TextBox x:Name="RecipeCuisines" Header= "Cuisines" TabIndex="3" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
+                    <TextBox x:Name="RecipeCuisines" Text="{Binding Cuisines, Mode=TwoWay}" Header="Cuisines" TabIndex="3" Margin="0,24,0,0" Width="400" extensions:ScrollViewerExtensions.HorizontalScrollBarMargin="0,25,0,0" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
                     <RelativePanel x:Name="RecipeTimePanel">
                         <TextBox x:Name="RecipePrepTime" Header="Prep Time" TabIndex="5" Margin="0,24,0,0" Width="70" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59" />
                         <TextBox x:Name="RecipeCookTime" Header="Cook Time" TabIndex="6" Margin="24,24,0,0" Width="70" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59" RelativePanel.RightOf="RecipePrepTime" />
@@ -39,7 +41,7 @@
                     </RelativePanel>
                     <RelativePanel x:Name="RecipeRatingPanel" Margin="0,24,0,0" >
                         <TextBlock x:Name="RecipeRatingsLabel" Text="Rating" />
-                        <RatingControl x:Name="RecipeRating" TabIndex="9" RelativePanel.Below="RecipeRatingsLabel" />
+                        <RatingControl x:Name="RecipeRating" Value="{Binding Rating, Mode=TwoWay}" TabIndex="9" RelativePanel.Below="RecipeRatingsLabel" />
                     </RelativePanel>
                 </StackPanel>
             </RelativePanel>
@@ -57,7 +59,7 @@
                     <AppBarButton x:Name="RecipeIngredientDeleteButton" Style="{StaticResource AppBarButtonRevealStyle}" IsEnabled="false" Icon="Delete" Label="Delete ingredient" Click="RecipeIngredientsDeleteButton_Click" />
                 </StackPanel>
 
-                <ListView x:Name="RecipeIngredientsListView" ItemsSource="{x:Bind NewRecipeIngredients}" SelectionMode="Single" RelativePanel.Below="RecipeIngredientsButtonPanel" SelectionChanged="RecipeIngredientsListView_SelectionChanged">
+                <ListView x:Name="RecipeIngredientsListView" ItemsSource="{Binding Ingredients}" SelectionMode="Single" RelativePanel.Below="RecipeIngredientsButtonPanel" SelectionChanged="RecipeIngredientsListView_SelectionChanged">
                     <ListView.ItemTemplate>
                         <DataTemplate x:Name="RecipeIngredientsSingleLineDataTemplate" x:DataType="recipeBox:Ingredient">
                             <StackPanel Orientation="Horizontal" AutomationProperties.Name="{x:Bind Name}">
@@ -76,7 +78,7 @@
                     <AppBarButton x:Name="RecipeInstructionDeleteButton" Style="{StaticResource AppBarButtonRevealStyle}" IsEnabled="false" Icon="Delete" Label="Delete instruction" Click="RecipeInstructionsDeleteButton_Click" />
                 </StackPanel>
 
-                <ListView x:Name="RecipeInstructionsListView" ItemsSource="{x:Bind NewRecipeInstructions}" SelectionMode="Single" RelativePanel.Below="RecipeInstructionsButtonPanel" SelectionChanged="RecipeInstructionsListView_SelectionChanged">
+                <ListView x:Name="RecipeInstructionsListView" ItemsSource="{Binding Instructions}" SelectionMode="Single" RelativePanel.Below="RecipeInstructionsButtonPanel" SelectionChanged="RecipeInstructionsListView_SelectionChanged">
                     <ListView.ItemTemplate>
                         <DataTemplate x:Name="RecipeInstructionsSingleLineDataTemplate" x:DataType="recipeBox:RecipeInstruction">
                             <StackPanel Orientation="Horizontal" AutomationProperties.Name="{x:Bind Instruction}">
@@ -95,7 +97,7 @@
                     <AppBarButton x:Name="RecipeNoteDeleteButton" Style="{StaticResource AppBarButtonRevealStyle}" IsEnabled="false" Icon="Delete" Label="Delete note" Click="RecipeNotesDeleteButton_Click" />
                 </StackPanel>
                 
-                <ListView x:Name="RecipeNotesListView" ItemsSource="{x:Bind NewRecipeNotes}" SelectionMode="Single" RelativePanel.Below="RecipeNotesButtonPanel" SelectionChanged="RecipeNotesListView_SelectionChanged">
+                <ListView x:Name="RecipeNotesListView" ItemsSource="{Binding Notes}" SelectionMode="Single" RelativePanel.Below="RecipeNotesButtonPanel" SelectionChanged="RecipeNotesListView_SelectionChanged">
                     <ListView.ItemTemplate>
                         <DataTemplate x:Name="RecipeNotesSingleLineDataTemplate" x:DataType="recipeBox:RecipeNote">
                             <StackPanel Orientation="Horizontal" AutomationProperties.Name="{x:Bind Note}">
