--- a/RecipeBox/Pages/NewRecipePage.xaml
+++ b/RecipeBox/Pages/NewRecipePage.xaml
@@ -24,16 +24,54 @@
             <RelativePanel x:Name="RecipeDetailsPanel" RelativePanel.Below="NewRecipeCommandBar">
                 <StackPanel x:Name="RecipeDetailsPanelLeft" Margin="20" >
                     <TextBox x:Name="RecipeName" Text="{Binding Name, Mode=TwoWay}" Header="Name" TabIndex="0" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
-                    <!-- Replace RecipeCategories with a TokenizingTextBox -->
-                    <TextBox x:Name="RecipeCategories" Text="{Binding Categories, Mode=TwoWay}" Header="Categories" TabIndex="2" Margin="0,24,0,0" Width="400" extensions:ScrollViewerExtensions.HorizontalScrollBarMargin="0,25,0,0" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
+
+                    <StackPanel x:Name="RecipeCategoriesPanel">
+                        <TextBlock x:Name="RecipeCategoriesTitle" Text="Categories" Margin="0,24,0,0" VerticalAlignment="Center" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"/>
+                        <controls:TokenizingTextBox x:Name="RecipeCategoriesTokenizingTextBox" SuggestedItemsSource="" ItemsSource="{Binding Categories, Mode=TwoWay}" PlaceholderText="Add Categories" TabIndex="2" Width="400" HorizontalAlignment="Stretch" TextMemberPath="Text" TokenDelimiter="," >
+                            <controls:TokenizingTextBox.SuggestedItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding}" Padding="4,0,0,0"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </controls:TokenizingTextBox.SuggestedItemTemplate>
+                            <controls:TokenizingTextBox.TokenItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding}" Padding="4,0,0,0"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </controls:TokenizingTextBox.TokenItemTemplate>
+                        </controls:TokenizingTextBox>
+                    </StackPanel>
+
                     <TextBox x:Name="RecipeServings" Text="{Binding Servings, Mode=TwoWay}" Header="Number of servings" TabIndex="4" Margin="0,24,0,0" MaxLength="10" Width="125" HorizontalAlignment="Left" InputScope="NumberFullWidth" />
                     <TextBox x:Name="RecipeUrl" Text="{Binding Url, Mode=TwoWay}" Header="Url" TabIndex="8" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
                 </StackPanel>
 
                 <StackPanel x:Name="RecipeDetailsPanelRight" Margin="20" RelativePanel.RightOf="RecipeDetailsPanelLeft" >
                     <TextBox x:Name="RecipeDescription" Text="{Binding Description, Mode=TwoWay}" Header="Description" TabIndex="1" Margin="0,24,0,0" Width="400" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text" />
-                    <!-- Replace RecipeCuisines with a TokenizingTextBox -->
-                    <TextBox x:Name="RecipeCuisines" Text="{Binding Cuisines, Mode=TwoWay}" Header="Cuisines" TabIndex="3" Margin="0,24,0,0" Width="400" extensions:ScrollViewerExtensions.HorizontalScrollBarMargin="0,25,0,0" ScrollViewer.HorizontalScrollMode="Enabled" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" InputScope="Text"/>
+
+                    <StackPanel x:Name="RecipeCuisinesPanel">
+                        <TextBlock x:Name="RecipeCuisinesTitle" Text="Categories" Margin="0,24,0,0" VerticalAlignment="Center" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"/>
+                        <controls:TokenizingTextBox x:Name="RecipeCuisinesTokenizingTextBox" SuggestedItemsSource="" ItemsSource="{Binding Cuisines, Mode=TwoWay}" PlaceholderText="Add Categories" TabIndex="3" Width="400" HorizontalAlignment="Stretch" TextMemberPath="Text" TokenDelimiter="," >
+                            <controls:TokenizingTextBox.SuggestedItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding}" Padding="4,0,0,0"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </controls:TokenizingTextBox.SuggestedItemTemplate>
+                            <controls:TokenizingTextBox.TokenItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding}" Padding="4,0,0,0"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </controls:TokenizingTextBox.TokenItemTemplate>
+                        </controls:TokenizingTextBox>
+                    </StackPanel>
+
                     <RelativePanel x:Name="RecipeTimePanel">
                         <TextBox x:Name="RecipePrepTime" Header="Prep Time" TabIndex="5" Margin="0,24,0,0" Width="70" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59" />
                         <TextBox x:Name="RecipeCookTime" Header="Cook Time" TabIndex="6" Margin="24,24,0,0" Width="70" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59" RelativePanel.RightOf="RecipePrepTime" />
