Add PrepTime and CookTime bindings increase their textbox width

--- a/RecipeBox/Pages/NewRecipePage.xaml
+++ b/RecipeBox/Pages/NewRecipePage.xaml
@@ -73,8 +73,8 @@
                     </StackPanel>
 
                     <RelativePanel x:Name="RecipeTimePanel">
-                        <TextBox x:Name="RecipePrepTime" Header="Prep Time" TabIndex="5" Margin="0,24,0,0" Width="70" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59" />
-                        <TextBox x:Name="RecipeCookTime" Header="Cook Time" TabIndex="6" Margin="24,24,0,0" Width="70" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59" RelativePanel.RightOf="RecipePrepTime" />
+                        <TextBox x:Name="RecipePrepTime" Text="{Binding PrepTime, Mode=TwoWay}" Header="Prep Time" TabIndex="5" Margin="0,24,0,0" Width="75" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59:59" />
+                        <TextBox x:Name="RecipeCookTime" Text="{Binding CookTime, Mode=TwoWay}" Header="Cook Time" TabIndex="6" Margin="24,24,0,0" Width="75" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59:59" RelativePanel.RightOf="RecipePrepTime" />
                     </RelativePanel>
                     <RelativePanel x:Name="RecipeRatingPanel" Margin="0,24,0,0" >
                         <TextBlock x:Name="RecipeRatingsLabel" Text="Rating" />
