--- a/RecipeBox/Pages/NewRecipePage.xaml
+++ b/RecipeBox/Pages/NewRecipePage.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RecipeBox.Pages"
     xmlns:recipeBox="using:RecipeBox"
+    xmlns:converters="using:RecipeBox.Converters"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
     xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
@@ -74,8 +75,12 @@
                     </StackPanel>
 
                     <RelativePanel x:Name="RecipeTimePanel">
-                        <TextBox x:Name="RecipePrepTime" Text="{Binding PrepTime, Mode=TwoWay}" Header="Prep Time" TabIndex="5" Margin="0,24,0,0" Width="75" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59:59" />
-                        <TextBox x:Name="RecipeCookTime" Text="{Binding CookTime, Mode=TwoWay}" Header="Cook Time" TabIndex="6" Margin="24,24,0,0" Width="75" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59:59" RelativePanel.RightOf="RecipePrepTime" />
+                        <RelativePanel.Resources>
+                            <converters:TimeSpanToStringConverter x:Key="converters:TimeSpanToStringConverter"/>
+                        </RelativePanel.Resources>
+                        
+                        <TextBox x:Name="RecipePrepTime" Text="{Binding PrepTime, Mode=TwoWay, Converter={StaticResource converters:TimeSpanToStringConverter}}" Header="Prep Time" TabIndex="5" Margin="0,24,0,0" Width="75" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59" />
+                        <TextBox x:Name="RecipeCookTime" Text="{Binding CookTime, Mode=TwoWay, Converter={StaticResource converters:TimeSpanToStringConverter}}" Header="Cook Time" TabIndex="6" Margin="24,24,0,0" Width="75" HorizontalAlignment="Left" InputScope="NumberFullWidth" extensions:TextBoxMask.CustomMask="5:[0-5]" extensions:TextBoxMask.Mask="99:59" RelativePanel.RightOf="RecipePrepTime" />
                     </RelativePanel>
                     <RelativePanel x:Name="RecipeRatingPanel" Margin="0,24,0,0" >
                         <TextBlock x:Name="RecipeRatingsLabel" Text="Rating" />
