Adding RecipePrintPage, using PrintServiceProvider

--- a/RecipeBox/Pages/RecipeDetailPage.xaml
+++ b/RecipeBox/Pages/RecipeDetailPage.xaml
@@ -15,112 +15,9 @@
     DataContext="{x:Bind recipe}"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Page.Resources>
-        <DataTemplate x:Name="RecipePrintTemplate">
-            <StackPanel>
-                <StackPanel.Resources>
-                    <converters:TimeSpanToStringConverter x:Key="converters:TimeSpanToStringConverter"/>
-                </StackPanel.Resources>
-                
-                <TextBlock Text="{Binding Name}" FontSize="38" Margin="60" TextWrapping="Wrap" />
-                <TextBlock Text="{Binding Description}" TextWrapping="Wrap" />
-
-                <StackPanel Orientation="Horizontal" Margin="0,24,0,0" >
-                    <TextBlock Text="Categories:" />
-                    <ItemsControl ItemsSource="{Binding Categories}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal"/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding}" VerticalAlignment="Center" Margin="5,0,0,0" TextWrapping="Wrap" />
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal" >
-                    <TextBlock Text="Cuisine:" />
-                    <ItemsControl ItemsSource="{Binding Cuisines}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal"/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding}" VerticalAlignment="Center" Margin="5,0,0,0" TextWrapping="Wrap" />
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal" Margin="0,24,0,0" >
-                    <TextBlock Text="Prep Time:" />
-                    <TextBlock x:Name="RecipeDetailPrepTime" Text="{Binding PrepTime, Converter={StaticResource converters:TimeSpanToStringConverter}}" Margin="5,0,0,0" />
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal" >
-                    <TextBlock Text="Cook Time:" />
-                    <TextBlock x:Name="RecipeDetailCookTime" Text="{Binding CookTime, Converter={StaticResource converters:TimeSpanToStringConverter}}" Margin="5,0,0,0" />
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal" >
-                    <TextBlock Text="Total Time:" />
-                    <TextBlock x:Name="RecipeDetailTotalTime" Text="{Binding TotalTime, Converter={StaticResource converters:TimeSpanToStringConverter}}" Margin="5,0,0,0"/>
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal" Margin="0,24,0,0">
-                    <TextBlock Text="Servings:" />
-                    <TextBlock x:Name="RecipeDetailServings" Text="{Binding Servings}" Margin="5,0,0,0"/>
-                </StackPanel>
-
-                <TextBlock Text="Ingredients" VerticalAlignment="Center" Margin="0,24,0,0"/>
-                <ListView ItemsSource="{Binding Ingredients}" SelectionMode="None">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="recipeBox:Ingredient">
-                            <StackPanel Orientation="Horizontal" AutomationProperties.Name="{x:Bind Name}">
-                                <StackPanel.Resources>
-                                    <converters:IngredientToStringConverter x:Key="converters:IngredientToStringConverter"/>
-                                </StackPanel.Resources>
-
-                                <TextBlock Text="{Binding Converter={StaticResource converters:IngredientToStringConverter}}" TextWrapping="Wrap" VerticalAlignment="Center" Margin="12,0,0,0"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-
-                <TextBlock Text="Instructions" VerticalAlignment="Center" Margin="0,24,0,0"/>
-                <ListView ItemsSource="{Binding Instructions}" SelectionMode="None">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="recipeBox:RecipeInstruction">
-                            <StackPanel Orientation="Horizontal" AutomationProperties.Name="{x:Bind Instruction}">
-                                <TextBlock Text="{Binding}" TextWrapping="Wrap" VerticalAlignment="Center" Margin="12,0,0,0"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-
-                <TextBlock Text="Notes" VerticalAlignment="Center"/>
-                <ListView ItemsSource="{Binding Notes}" SelectionMode="None">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="recipeBox:RecipeNote">
-                            <StackPanel Orientation="Horizontal" AutomationProperties.Name="{x:Bind Note}">
-                                <TextBlock Text="{x:Bind x:String.Format('&#x2022; {0}', Note)}" TextWrapping="Wrap" VerticalAlignment="Center" Margin="12,0,0,0"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackPanel>
-        </DataTemplate>
-    </Page.Resources>
-
     <Grid>
-        <Grid x:Name="PrintContainer" Grid.RowSpan="2" Opacity="0" />
+        <!-- Required for the print service provider -->
+        <Canvas x:Name="printingRoot" Opacity="0" Margin="-2000 0 0 0" />
 
         <RelativePanel>
             <TextBlock x:Name="TitleTextBlock" Text="{Binding Name}" Style="{StaticResource TitleTextBlockStyle}" Margin="24,0,0,24" />
